CSS bug overflow when items are scrolling the element

--- a/web/static/css/style.css
+++ b/web/static/css/style.css
@@ -847,7 +847,6 @@ body * {
 }
 
 .modal-wrapper .modal-content {
-    overflow: hidden;
     max-height: calc(var(--modal-height) - 65px);
 }
 
